--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ header{
 }
 .formBox {
     width: 70%;
-    background: lightgreen;
+    background: whitesmoke;
+    height: 100%;
 }
 
 form{
     width: 50%;
     height: 90%;
     margin: auto;
-    margin-top: 2.5%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -66,6 +66,13 @@ select {
     outline: none;
     border-radius: 5px;
     cursor: pointer;
+}
+input:focus {
+    outline: none;
+}
+span {
+    color: red;
+    font-size: 10px;
 }
 .erreur {
     border: 1px solid red;
