--- a/style.css
+++ b/style.css
@@ -101,6 +101,15 @@ input[type=redio] {
     background: lightsalmon;
 }
 
+#modifier {
+    display: none;
+    width: 100%;
+    padding: 15px 0;
+    background: lightgreen;
+    border: none;
+    outline: none;
+}
+
 .tableBox {
     width: 90%;
     margin: auto;
@@ -123,12 +132,7 @@ td,th{
     background-color: aqua;
 }
 
-#modifier {
-    display: none;
-    padding: 10px 10px;
-    background-color: lightseagreen;
-    margin-left: 5px;
-}
+
 .supprimer  {
     padding: 10px 10px;
     background-color: lightcoral;
